[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/slime_wall_down.tres" type="SpriteFrames" id=1]
[ext_resource path="res://scripts/slime_plort.gd" type="Script" id=2]
[ext_resource path="res://assets/Plort.png" type="Texture" id=3]
[ext_resource path="res://assets/Trank_Rot.png" type="Texture" id=4]
[ext_resource path="res://assets/Item_Wand.png" type="Texture" id=5]
[ext_resource path="res://assets/Boss.png" type="Texture" id=6]
[ext_resource path="res://Arial.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/Grabstein-1.png" type="Texture" id=8]
[ext_resource path="res://scripts/potion_plort.gd" type="Script" id=9]
[ext_resource path="res://scripts/Game.gd" type="Script" id=10]
[ext_resource path="res://assets/friedhof-bg.png" type="Texture" id=11]
[ext_resource path="res://assets/path.png" type="Texture" id=12]
[ext_resource path="res://Marlon/Test1/Schleim-1.png" type="Texture" id=13]
[ext_resource path="res://assets/Play.png" type="Texture" id=14]
[ext_resource path="res://scenes/shop.tscn" type="PackedScene" id=15]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 7 )

[node name="Game" type="Node2D"]
script = ExtResource( 10 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 820, 450 )
scale = Vector2( 1.51134, 1.51134 )
texture = ExtResource( 12 )

[node name="player_panel" type="Panel" parent="."]
margin_left = 1300.0
margin_right = 1600.0
margin_bottom = 900.0

[node name="ressource_subpanel" type="Panel" parent="player_panel"]
margin_top = 1.0
margin_right = 198.0
margin_bottom = 119.0

[node name="slime_plort" type="Label" parent="player_panel/ressource_subpanel"]
margin_left = 49.0
margin_top = 24.0
margin_right = 274.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 1 )
text = "0"
script = ExtResource( 2 )

[node name="Plort_Sprite" type="Sprite" parent="player_panel/ressource_subpanel"]
position = Vector2( 18.5, 47.5 )
scale = Vector2( 2.0625, 2.0625 )
texture = ExtResource( 3 )

[node name="potion_subpanel" type="Panel" parent="player_panel"]
margin_left = 2.0
margin_top = 106.0
margin_right = 201.0
margin_bottom = 214.0

[node name="progress_bar" type="ColorRect" parent="player_panel/potion_subpanel"]
margin_left = 78.0
margin_top = 20.0
margin_right = 278.0
margin_bottom = 70.0
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="potion1" type="Label" parent="player_panel/potion_subpanel"]
margin_left = 42.0
margin_top = 22.0
margin_right = 262.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 2 )
text = "0"
script = ExtResource( 9 )

[node name="TrankRot_Sprite" type="Sprite" parent="player_panel/potion_subpanel"]
position = Vector2( 19, 46 )
scale = Vector2( 1.9375, 1.9375 )
texture = ExtResource( 4 )

[node name="progress_bar_progress" type="ColorRect" parent="player_panel/potion_subpanel"]
margin_left = 88.0
margin_top = 25.0
margin_right = 88.0
margin_bottom = 105.0
color = Color( 0.878431, 0.027451, 0.027451, 1 )

[node name="duration_label" type="Label" parent="player_panel/potion_subpanel"]
margin_left = 78.0
margin_top = 20.0
margin_right = 278.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 3 )
text = "0:05"
align = 1
valign = 1

[node name="potion_button" type="Button" parent="player_panel"]
margin_left = 169.0
margin_top = 693.0
margin_right = 298.0
margin_bottom = 821.0
text = "Brew Potion"

[node name="Sprite" type="Sprite" parent="player_panel/potion_button"]
position = Vector2( 61, 63.9999 )
scale = Vector2( 4.53125, 4.53125 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="player_panel/potion_button/Sprite"]
texture = ExtResource( 4 )

[node name="enemy_panel" type="Panel" parent="."]
margin_right = 300.0
margin_bottom = 900.0

[node name="graveyard" type="Panel" parent="enemy_panel"]
margin_top = 600.0
margin_right = 300.0
margin_bottom = 900.0

[node name="Friedhof-bg" type="Sprite" parent="enemy_panel/graveyard"]
position = Vector2( 150, 140.5 )
scale = Vector2( 2, 2 )
texture = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="enemy_panel/graveyard"]
position = Vector2( 125, 46 )
scale = Vector2( 3.375, 3.375 )
texture = ExtResource( 8 )

[node name="Sprite2" type="Sprite" parent="enemy_panel/graveyard"]
position = Vector2( 204, 146 )
scale = Vector2( 3.375, 3.375 )
texture = ExtResource( 8 )

[node name="Sprite3" type="Sprite" parent="enemy_panel/graveyard"]
position = Vector2( 82, 215 )
scale = Vector2( 3.375, 3.375 )
texture = ExtResource( 8 )

[node name="enemy_debuff" type="Label" parent="enemy_panel"]
margin_right = 200.0
margin_bottom = 100.0

[node name="ItemWand" type="Sprite" parent="enemy_panel/enemy_debuff"]
position = Vector2( 105, 95 )
scale = Vector2( 6.0625, 5.9375 )
texture = ExtResource( 5 )

[node name="Boss" type="Sprite" parent="enemy_panel/enemy_debuff"]
position = Vector2( 108, 102 )
scale = Vector2( 5.90625, 5.90625 )
texture = ExtResource( 6 )

[node name="Node2D3" parent="." instance=ExtResource( 15 )]
position = Vector2( 1300, 246 )

[node name="next_wave_button" type="Button" parent="."]
margin_left = 1322.0
margin_top = 693.0
margin_right = 1451.0
margin_bottom = 820.0
text = "Next wave"

[node name="Sprite2" type="Sprite" parent="next_wave_button"]
position = Vector2( 63.9999, 63.0001 )
scale = Vector2( 4.531, 4.531 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="next_wave_button/Sprite2"]
position = Vector2( -0.262283, 0.78688 )
scale = Vector2( 2.03279, 2.03279 )
texture = ExtResource( 14 )

[node name="slime_wall" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 800, 420 )
scale = Vector2( 1.9, 1.62206 )
frames = ExtResource( 1 )

[node name="wave_counter" type="Label" parent="."]
margin_left = 1305.0
margin_top = 532.0
margin_right = 1596.0
margin_bottom = 662.0
custom_fonts/font = SubResource( 4 )
text = "Wave: 10

         40"

[node name="Sprite" type="Sprite" parent="wave_counter"]
position = Vector2( 29, 94 )
scale = Vector2( 4.5625, 4.5625 )
texture = ExtResource( 13 )

[connection signal="pressed" from="player_panel/potion_button" to="player_panel/potion_subpanel/potion1" method="_on_potion_button_pressed"]
[connection signal="pressed" from="next_wave_button" to="." method="_on_next_wave_button_pressed"]
[connection signal="animation_finished" from="slime_wall" to="." method="_on_slime_wall_animation_finished"]
